--- a/projects/provost.html
+++ b/projects/provost.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina | Illustration | Holiday Card</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
