--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="head">
 	<div style="padding-top: 35px;"></div>
 	<header class="container">
-		<a href="index.html"><img class="logo" src="assets/reginaLogo1.png" alt="Regina Yan"></a>
+		<a href="index.html"><img class="logo" src="assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
 			<a href="designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
