jk going back to old font

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Regina Yan</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Yeseva+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -29,7 +29,7 @@
 	<div class="home_intro">
 	<h3 style="color:white;">Hi there, I'm </h3>
 	<h1 style="color:white;">
-		REGINA
+		Regina
 	</h1>
 	<h3 style="color:white;">
 		I'm a designer and engineer with a passion for the outdoors and human-centered design.
